--- a/source/KOSIS/KOSIS_전처리.ipynb
+++ b/source/KOSIS/KOSIS_전처리.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.options.display.max_columns = 100 # 39열까지 display 가능\n",
-    "pd.options.display.max_rows =100 # 40행까지display 가능"
+    "pd.options.display.max_columns = 100\n",
+    "pd.options.display.max_rows =100"
    ]
   },
   {
